fixed scroll spacing at bottom

--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,17 @@
   font-family: "PT Sans", sans-serif;
 }
 
+body {
+  overflow: hidden;
+}
+
 .App {
   text-align: center;
   display: flex;
   justify-content: center;
   background-color: #282c34;
   background-image: url("../images/Twit\ Background.png");
-  background-size: stretch;
-  overflow-y: hidden;
+  background-size: cover;
 }
 
 .App-logo {
