--- a/src/components/ContentItem.css
+++ b/src/components/ContentItem.css
@@ -17,6 +17,7 @@
   display: flex;
   border-radius: 3vh;
   margin-bottom: 2vh;
+  width: 100px;
 }
 
 .content-header-names {
@@ -25,10 +26,9 @@
   text-align: left;
 }
 .content-header-names > h1 {
-  font-size: 1.5vh;
+  font-size: 2vh;
 }
 .content-header-names > p {
-  font-size: 1.5vh;
   color: rgb(81, 144, 232);
 }
 
