--- a/src/components/PageContent.css
+++ b/src/components/PageContent.css
@@ -3,16 +3,25 @@
   height: 100vh;
   overflow: hidden;
   overflow-y: scroll;
-  margin-top: 1vh;
+  padding-bottom: 5vh;
   display: flex;
   flex-direction: column;
+  border-radius: 0.5vh;
+  padding-top: 5vh;
+  border: 1px solid red;
+  gap: 3vh;
+  padding-bottom: 5vh;
 }
 
 .content-item-container {
   display: flex;
   flex-direction: column;
   color: black;
-  margin: 2vh 0;
+}
+
+.space-container {
+  height: 20vh;
+  margin-bottom: 20vh;
 }
 
 #twit-title {
